Finish DataInitializer class